[package]
name = "spiders-snooper"
version = "0.1.0"
edition = "2021"
authors = ["Cuprum Wangzuo <cuprumwz@foxmail.com"]
description = "menage snooper for tribers instance named spiders"

[dependencies]
tribers = { version = "0" }

spiders-scheme = { version = "0", path = "../../pieces/spiders-scheme" }

anyhow = { version = "1" }
thiserror  = { version = "1" }

futures = { version = "0.3" }
async-trait = { version = "0.1" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
console = { version = "0.15" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.2", features = ["metrics", ] }

clap = { version = "4", features = ["derive", "env"] }

serde = { version = "1" }
serde_json = { version = "1" }

http = { version = "1.0" }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["add-extension"] }
axum = { version = "0.7" }
axum-login = { version = "0.15" }

askama = { version = "0.12", features = ["with-axum"] }
askama_axum = { version = "0.4" }

nusb = { version = "0.1" }

sqlx = { version = "0.7", features = ["sqlite", "time", "runtime-tokio"] }
sea-orm = { version = "0.12" }

sigrok = { git = "https://github.com/cuprumwz/sigrok-rs.git" }
serialport = { version = "3.2.0" }
tokio-serial = { version = "5.4" }

tonic = { verison = "0" }

[build-dependencies]
tonic-build = { version = "0.11" }
