[package]
name = "spiders-visitor"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
# leptonic = { version = "0.5", features = ["full", "csr"] }
# leptonic = { git = "https://github.com/lpotthast/leptonic.git", features = ["full", "csr"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-wasm = { version = "0.2" }
leptos-struct-table = { version = "0.10", features = ["chrono"] }
chrono = { version = "0.4" }
console_log = { version = "1" }
log = { version = "0.4" }

[workspace]
members = ["src-tauri"]

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory.
js-dir = "public/js"
